--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    outline: 0;
+    transition: all 0.5s ease;
+}
 body{
     color:white;
     background: rgb(1, 0, 20);
@@ -98,7 +105,153 @@ input{
     border: 0;
 
 }
+/*Calculadora*/
+.container2{
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
+}
 
+.calculadora{
+    position: relative;
+    height: auto;
+    width: auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(0, 153, 255, 0.801);
+}
+.alternador-tema{
+    position: absolute;
+    top:30px;
+    right: 30px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.alternador-tema.activo{
+    color: #333;
+
+}
+
+.alternador-tema.activo::before{
+    background-color: #fff;
+}
+
+.alternador-tema::before{
+    content: '';
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background-color: #333;
+    z-index: -1;
+}
+
+#display{
+    margin: 0 10px;
+    height: 180px;
+    width: auto;
+    max-width: 270px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 30px;
+    margin-bottom: 20px;
+    overflow-x:scroll ;
+}
+
+#display::-webkit-scrollbar{
+    display: block;
+    height: 3px;
+}
+
+button{
+    height: 60px;
+    width: 60px;
+    border: 0;
+    border-radius: 30px;
+    margin: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 200ms ease;
+}
+
+button::hover{
+    transform: scale(1.1);
+}
+
+button#igual{
+    height: 130px;
+}
+
+
+/*Tema Claro*/
+.calculadora{
+    background-color: #fff ;
+}
+
+.calculadora #display{
+    color: #0a1e23;
+}
+
+.calculadora button#claro{
+    background-color: #fff;
+    color: #fc4552;
+}
+
+.calculadora button.btn-numero{
+    background-color: #c3eaff;
+    color:black;
+}
+
+.calculadora button.btn-operador{
+    background-color: white;
+    color: #f967f3;
+}
+
+.calculadora button.btn-igual{
+    background-color: #adf9e7;
+    color:black;
+}
+/*Tema Oscuro*/
+
+.calculadora.dark{
+    background-color: #071115;
+}
+
+.calculadora.dark #display{
+    color: white;
+}
+
+.calculadora.dark button#claro{
+    background-color: #2d191e;
+    color: #bd3740;
+}
+
+.calculadora.dark button.btn-numero{
+    background-color: #1b2f38;
+    color:white;
+}
+
+.calculadora.dark button.btn-operador{
+    background-color: #2e1f39;
+    color: #aa00a4;
+}
+
+.calculadora.dark button.btn-igual{
+    background-color: #223323;
+    color: white;
+}
+
+
+
+
+
+/*footer*/
 .footer-wrapper {
     background-color:  black;
 }
